Remove usage of KEncodingFileDialog

This doesn't work anymore and users usually don't know that is the file
encoding of their file. Instead try to determine the encoding based on
the first MB and fallback to the system encoding if no encoding can be
determined automatically.

BUG: 469080